moved some folers

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_sales.csv\")"
+    "df = pd.read_csv(r\"C:\\Users\\TCS\\Desktop\\house_sales_time_series\\raw_sales.csv\")"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,16 +1098,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_sales.csv\")"
+    "df = pd.read_csv(r\"C:\\Users\\TCS\\Desktop\\house_sales_time_series\\raw_sales.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1603,39 +1603,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29575</th>\n",
-       "      <td>17</td>\n",
-       "      <td>500000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>657500</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29576</th>\n",
-       "      <td>10</td>\n",
-       "      <td>560000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29577</th>\n",
-       "      <td>24</td>\n",
-       "      <td>464950</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>12</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29578</th>\n",
+       "      <th>29576</th>\n",
        "      <td>1</td>\n",
        "      <td>589000</td>\n",
        "      <td>1</td>\n",
@@ -1646,13 +1624,35 @@
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29579</th>\n",
-       "      <td>10</td>\n",
-       "      <td>775000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <th>29577</th>\n",
+       "      <td>21</td>\n",
+       "      <td>610000</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29578</th>\n",
+       "      <td>12</td>\n",
+       "      <td>647500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29579</th>\n",
+       "      <td>21</td>\n",
+       "      <td>865000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>12</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
@@ -1669,11 +1669,11 @@
        "3             21  380000              0         4        0            4     0   \n",
        "4             22  310000              0         3        0            2     0   \n",
        "...          ...     ...            ...       ...      ...          ...   ...   \n",
-       "29575         17  500000              1         3        0            3    12   \n",
-       "29576         10  560000              1         2        0            3    12   \n",
-       "29577         24  464950              1         2        0            4    12   \n",
-       "29578          1  589000              1         2        0            4    12   \n",
-       "29579         10  775000              1         2        0            4    12   \n",
+       "29575         18  657500              0         4        0            4    12   \n",
+       "29576          1  589000              1         2        0            4    12   \n",
+       "29577         21  610000              0         4        0            5    12   \n",
+       "29578         12  647500              0         4        0            5    12   \n",
+       "29579         21  865000              0         5        0            5    12   \n",
        "\n",
        "       month  \n",
        "0          2  \n",
@@ -1691,7 +1691,7 @@
        "[29580 rows x 8 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
