Refactor execution counts and update file paths in Jupyter notebooks

--- a/model_pipeline/xgboost_model.ipynb
+++ b/model_pipeline/xgboost_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,19 +25,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from xgboost import XGBRegressor\n",
     "\n",
-    "from Notebooks.preprocessing import main, sort_data\n",
+    "from preprocessing import main, sort_data\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "color_pallet = sns.color_palette(\"husl\", 8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_original = pd.read_csv(\"raw_sales.csv\")"
    ]
   },
   {
@@ -46,12 +37,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_edited = main(df_original, tree_ensemble=True)"
+    "df_original = pd.read_csv(r\"C:\\Users\\TCS\\Desktop\\house_sales_time_series\\raw_sales.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_edited = main(df_original, tree_ensemble=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[29580 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "             num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -358,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_original = pd.read_csv(\"raw_sales.csv\")\n",
+    "df_original = pd.read_csv(r\"C:\\Users\\TCS\\Desktop\\house_sales_time_series\\raw_sales.csv\")\n",
     "df_original = sort_data(df_original)\n",
     "\n",
     "# Create a test and train dataframe\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
