--- a/Notebooks/exploring.ipynb
+++ b/Notebooks/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61079,7 +61079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150987,14 +150987,14 @@
           "bar": [
            {
             "error_x": {
-             "color": "#2a3f5f"
+             "color": "#f2f5fa"
             },
             "error_y": {
-             "color": "#2a3f5f"
+             "color": "#f2f5fa"
             },
             "marker": {
              "line": {
-              "color": "#E5ECF6",
+              "color": "rgb(17,17,17)",
               "width": 0.5
              },
              "pattern": {
@@ -151010,7 +151010,7 @@
            {
             "marker": {
              "line": {
-              "color": "#E5ECF6",
+              "color": "rgb(17,17,17)",
               "width": 0.5
              },
              "pattern": {
@@ -151025,18 +151025,18 @@
           "carpet": [
            {
             "aaxis": {
-             "endlinecolor": "#2a3f5f",
-             "gridcolor": "white",
-             "linecolor": "white",
-             "minorgridcolor": "white",
-             "startlinecolor": "#2a3f5f"
+             "endlinecolor": "#A2B1C6",
+             "gridcolor": "#506784",
+             "linecolor": "#506784",
+             "minorgridcolor": "#506784",
+             "startlinecolor": "#A2B1C6"
             },
             "baxis": {
-             "endlinecolor": "#2a3f5f",
-             "gridcolor": "white",
-             "linecolor": "white",
-             "minorgridcolor": "white",
-             "startlinecolor": "#2a3f5f"
+             "endlinecolor": "#A2B1C6",
+             "gridcolor": "#506784",
+             "linecolor": "#506784",
+             "minorgridcolor": "#506784",
+             "startlinecolor": "#A2B1C6"
             },
             "type": "carpet"
            }
@@ -151354,10 +151354,10 @@
           ],
           "scatter": [
            {
-            "fillpattern": {
-             "fillmode": "overlay",
-             "size": 10,
-             "solidity": 0.2
+            "marker": {
+             "line": {
+              "color": "#283442"
+             }
             },
             "type": "scatter"
            }
@@ -151404,9 +151404,8 @@
           "scattergl": [
            {
             "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
+             "line": {
+              "color": "#283442"
              }
             },
             "type": "scattergl"
@@ -151511,18 +151510,18 @@
            {
             "cells": {
              "fill": {
-              "color": "#EBF0F8"
+              "color": "#506784"
              },
              "line": {
-              "color": "white"
+              "color": "rgb(17,17,17)"
              }
             },
             "header": {
              "fill": {
-              "color": "#C8D4E3"
+              "color": "#2a3f5f"
              },
              "line": {
-              "color": "white"
+              "color": "rgb(17,17,17)"
              }
             },
             "type": "table"
@@ -151531,7 +151530,7 @@
          },
          "layout": {
           "annotationdefaults": {
-           "arrowcolor": "#2a3f5f",
+           "arrowcolor": "#f2f5fa",
            "arrowhead": 0,
            "arrowwidth": 1
           },
@@ -151687,113 +151686,123 @@
            "#FECB52"
           ],
           "font": {
-           "color": "#2a3f5f"
+           "color": "#f2f5fa"
           },
           "geo": {
-           "bgcolor": "white",
-           "lakecolor": "white",
-           "landcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
+           "lakecolor": "rgb(17,17,17)",
+           "landcolor": "rgb(17,17,17)",
            "showlakes": true,
            "showland": true,
-           "subunitcolor": "white"
+           "subunitcolor": "#506784"
           },
           "hoverlabel": {
            "align": "left"
           },
           "hovermode": "closest",
           "mapbox": {
-           "style": "light"
+           "style": "dark"
           },
-          "paper_bgcolor": "white",
-          "plot_bgcolor": "#E5ECF6",
+          "paper_bgcolor": "rgb(17,17,17)",
+          "plot_bgcolor": "rgb(17,17,17)",
           "polar": {
            "angularaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
-           "bgcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
            "radialaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            }
           },
           "scene": {
            "xaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            },
            "yaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            },
            "zaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            }
           },
           "shapedefaults": {
            "line": {
-            "color": "#2a3f5f"
+            "color": "#f2f5fa"
            }
+          },
+          "sliderdefaults": {
+           "bgcolor": "#C8D4E3",
+           "bordercolor": "rgb(17,17,17)",
+           "borderwidth": 1,
+           "tickwidth": 0
           },
           "ternary": {
            "aaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
            "baxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
-           "bgcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
            "caxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            }
           },
           "title": {
            "x": 0.05
           },
+          "updatemenudefaults": {
+           "bgcolor": "#506784",
+           "borderwidth": 0
+          },
           "xaxis": {
            "automargin": true,
-           "gridcolor": "white",
-           "linecolor": "white",
+           "gridcolor": "#283442",
+           "linecolor": "#506784",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "white",
+           "zerolinecolor": "#283442",
            "zerolinewidth": 2
           },
           "yaxis": {
            "automargin": true,
-           "gridcolor": "white",
-           "linecolor": "white",
+           "gridcolor": "#283442",
+           "linecolor": "#506784",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "white",
+           "zerolinecolor": "#283442",
            "zerolinewidth": 2
           }
          }
@@ -151829,11 +151838,13 @@
     }
    ],
    "source": [
-    "# Convert bedrooms to an ordered categorical type\n",
-    "df[\"bedrooms\"] = df[\"bedrooms\"].cat.as_ordered()\n",
+    "import plotly.express as px\n",
+    "import numpy as np\n",
     "\n",
-    "# Lets create a scatter plot with the price and bedrooms\n",
+    "# Convert bedrooms to an ordered categorical type (if not already done)\n",
+    "df[\"bedrooms\"] = df[\"bedrooms\"].astype(\"category\").cat.as_ordered()\n",
     "\n",
+    "# Create a scatter plot with Plotly\n",
     "fig = px.scatter(\n",
     "    df,\n",
     "    x=np.arange(len(df)),\n",
@@ -151842,7 +151853,10 @@
     "    size=\"bedrooms\",\n",
     "    symbol=\"property_type\",\n",
     "    title=\"Scatter Plot of Property Prices\",\n",
+    "    template=\"plotly_dark\",  # Apply the dark theme\n",
     ")\n",
+    "\n",
+    "# Show the plot\n",
     "fig.show()\n"
    ]
   },
